--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["Samuel Spencer <theodore.therone@gmail.com>"]
 readme = "README.md"
+packages = [
+    { include = "mast_toolkit", from = "app" },
+    { include = "web", from = "app" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
